# Mazewright

./: .pre-commit-config.yaml  README.md  maze_demo.ipynb  progress.md  pyproject.toml
.github/workflows/: publish.yml
mazewright/: __init__.py  __main__.py  maze.py  solver.py  visualize.py
mazewright.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mazewright/algorithms/: __init__.py  backtracker.py  kruskal.py  prim.py
tests/: test_maze.py  test_visualize.py
