[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazewright"
version = "0.2.0"
description = "A Python package for generating and visualizing mazes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sebastian Griego", email = "sebastianngriego@gmail.com"}
]
dependencies = [
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pre-commit>=2.20.0",
]

[project.scripts]
mazewright = "mazewright.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazewright*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]